package edu.hitsz.aircraft;

import edu.hitsz.application.Main;
import java.util.Random;

/**
 * 精英敌机工厂类
 * 负责创建精英敌机实例
 */
public class EliteEnemyFactory implements EnemyFactory {
    private final Random random = new Random();
    
    @Override
    public AbstractAircraft createEnemyAircraft() {
        // 随机生成X坐标，但确保敌机在屏幕范围内
        int locationX = random.nextInt(Main.WINDOW_WIDTH);
        // Y坐标从屏幕顶部出现
        int locationY = 0;
        // 速度设置：X方向随机，Y方向向下
        int speedX = random.nextInt(8) - 4; // -4到3之间的随机速度
        int speedY = 8;
        // 生命值（精英敌机生命值更高）
        int hp = 60;
        
        return new EliteEnemy(locationX, locationY, speedX, speedY, hp);
    }
}